@@ -74,6 +74,10 @@
 						--add-opens
 						javamm.compiler/com.revenat.javamm.compiler.component.impl.parser=ALL-UNNAMED
 						--add-opens
+						javamm.compiler/com.revenat.javamm.compiler.component.impl.parser.custom=ALL-UNNAMED
+						--add-opens
+						javamm.compiler/com.revenat.javamm.compiler.component.impl.parser.reference=ALL-UNNAMED
+						--add-opens
 						javamm.compiler/com.revenat.javamm.compiler.integration=ALL-UNNAMED
 					</argLine>
 				</configuration>
